--- a/TimeSeriesChart-Web/package.json
+++ b/TimeSeriesChart-Web/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "canvasjs": "^1.8.3",
+    "chart.js": "^2.9.3",
+    "ng2-charts": "^2.3.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
