--- a/TimeSeriesChart-Web/angular.json
+++ b/TimeSeriesChart-Web/angular.json
@@ -90,7 +90,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
+            ]
           }
         },
         "lint": {
