--- a/TimeSeriesChart-Web/package.json
+++ b/TimeSeriesChart-Web/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "bootstrap": "^4.5.2",
     "canvasjs": "^1.8.3",
     "chart.js": "^2.9.3",
     "ng2-charts": "^2.3.3",
+    "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
