--- a/TimeSeriesChart.API/TimeSeriesChart.Data/TimeSeriesChart.Data.csproj
+++ b/TimeSeriesChart.API/TimeSeriesChart.Data/TimeSeriesChart.Data.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -16,8 +16,4 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TimeSeriesChart.Data\TimeSeriesChart.Data.csproj" />
-  </ItemGroup>
-
 </Project>
