--- a/TimeSeriesChart-Web/package.json
+++ b/TimeSeriesChart-Web/package.json
@@ -22,8 +22,10 @@
     "bootstrap": "^4.5.2",
     "canvasjs": "^1.8.3",
     "chart.js": "^2.9.3",
+    "jquery": "^3.5.1",
     "ng2-charts": "^2.3.3",
     "ngx-bootstrap": "^5.6.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
