--- a/TimeSeriesChart.API/TimeSeriesChart.API/TimeSeriesChart.API.csproj
+++ b/TimeSeriesChart.API/TimeSeriesChart.API/TimeSeriesChart.API.csproj
@@ -3,7 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
+    <None Remove="Controllers\yldp1njj.u5m~" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="16.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.7">
       <PrivateAssets>all</PrivateAssets>
@@ -18,6 +23,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TimeSeriesChart.Data\TimeSeriesChart.Data.csproj" />
+    <ProjectReference Include="..\TimeSeriesChart.Report\TimeSeriesChart.Report.csproj" />
   </ItemGroup>
 
 </Project>
